--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 			}, {
 			"@context" : "http://schema.org",
 			"@type" : "Restaurant",
-			"telephone" : "(905) 787-0396",
+			"telephone" : "(647) 640-5245",
 			"address" : {
 				"@type" : "PostalAddress",
 				"addressLocality" : "RICHMOND HILL"
@@ -580,7 +580,8 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Milk Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.2</strong>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.2</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Original, Jasmine Green, Taro, Taro Coconut, Strawberry, Coffee, Rose, Almond, Mango, Chocolate, Blueberry, Oolong, Matcha, Honeydew, Banana, Coconut, Hazelnut, Red Bean, Earl Grey.</p>
@@ -590,7 +591,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 3.8</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Options:</b> Black, Jasmine Green, Oolong, Tea Satchet.</p>
@@ -600,7 +601,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fruity Green/Black Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.5</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.7</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Mango, Green Apple, Tropical Fruit, Yogurt, Honey, Litchi, Grape, Blueberry, Honey Lemon, Passionfruit, Peach, Pineapple, Kumquat, Grapefruit, Strawberry.</p>
@@ -1155,7 +1156,7 @@
 										<hr class="mx-auto w-25 custom-h-1 appear-animation" data-appear-animation="dividerProgress25" data-appear-animation-delay="200">
 									</div>
 									<p class="text-4 line-height-9 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
-										Phone us at <a href="tel:905-787-0396">(905) 787-0396</a> during store <a href="#order">hours</a>. 
+										Phone us at <a href="tel:647-640-5245">(647) 640-5245</a> during store <a href="#order">hours</a>. 
 										For detailed questions or business inquiries, please fill in the form below.
 									</p>
 								</div>
