--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Milk Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.2 <span class="custom-tertiary-font">L $</span> 4.7</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.2 | <span class="custom-tertiary-font">L $</span> 4.7</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Original, Jasmine Green, Taro, Taro Coconut, Strawberry, Coffee, Rose, Almond, Mango, Chocolate, Blueberry, Oolong, Matcha, Honeydew, Banana, Coconut, Hazelnut, Red Bean, Earl Grey.</p>
@@ -590,7 +590,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4 | <span class="custom-tertiary-font">L $</span> 4.5</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Options:</b> Black, Jasmine Green, Oolong, Tea Satchet.</p>
@@ -600,7 +600,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fruity Green/Black Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.7</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.7 | <span class="custom-tertiary-font">L $</span> 5.2</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Mango, Green Apple, Tropical Fruit, Yogurt, Honey, Litchi, Grape, Blueberry, Honey Lemon, Passionfruit, Peach, Pineapple, Kumquat, Grapefruit, Strawberry.</p>
@@ -708,7 +708,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Fresh Lemon Green Tea</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5.2</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 5.2 | <span class="custom-tertiary-font">L $</span> 5.7</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Original, Passionfruit, Litchi, Green Apple, Grapefruit.</p>
@@ -718,7 +718,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Slush</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 4.7</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 4.9 | <span class="custom-tertiary-font">L $</span> 5.4</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Mango, Pineapple, Passionfruit, Honeydew, Grape, Blueberry, Yogurt, Strawberry, Matcha, Peach, Taro, Litchi.</p>
@@ -728,7 +728,7 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Real Fruit Smoothie</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5.8</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">R $</span> 6 | <span class="custom-tertiary-font">L $</span> 7</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
 										<p><b>Flavours:</b> Strawberry, Mango, Strawberry Banana, Avocado.</p>
