update bingsu prices

--- a/index.html
+++ b/index.html
@@ -614,91 +614,81 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Injeolmi Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 8</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9 | <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
 									</div>
-									<div class="custom-menu-item-desc">
+									<!--div class="custom-menu-item-desc">
 										<p>Bowl $11.</p>
-									</div>
+									</!--div-->
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Strawberry Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 8</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
-									<div class="custom-menu-item-desc">
+									<!--div class="custom-menu-item-desc">
 										<p>Bowl $12.</p>
-									</div>
+									</!--div-->
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Mango Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 8</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9 | <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
 									</div>
-									<div class="custom-menu-item-desc">
+									<!--div class="custom-menu-item-desc">
 										<p>Bowl $11.</p>
-									</div>
+									</!--div-->
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Green Tea Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
-									<div class="custom-menu-item-desc">
+									<!--div class="custom-menu-item-desc">
 										<p>Bowl $12.</p>
-									</div>
-								</div>
-								<div class="custom-menu-item">
-									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Sesame Bingsu</h3></div>
-										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9</strong></div>
-									</div>
-									<div class="custom-menu-item-desc">
-										<p>Bowl $12.</p>
-									</div>
+									</!--div-->
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Red Bean Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
-									<div class="custom-menu-item-desc">
+									<!--div class="custom-menu-item-desc">
 										<p>Bowl $12.</p>
-									</div>
+									</!--div-->
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Oreo Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 8</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9 | <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
 									</div>
-									<div class="custom-menu-item-desc">
+									<!--div class="custom-menu-item-desc">
 										<p>Bowl $11.</p>
-									</div>
+									</!--div-->
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Taro Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
-									<div class="custom-menu-item-desc">
+									<!--div class="custom-menu-item-desc">
 										<p>Bowl $12.</p>
-									</div>
+									</!--div-->
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Cheesecake Bingsu</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
-									<div class="custom-menu-item-desc">
+									<!--div class="custom-menu-item-desc">
 										<p>Bowl $12.</p>
-									</div>
+									</!--div-->
 								</div>
 							</div>
 
