--- a/index.html
+++ b/index.html
@@ -565,6 +565,7 @@
 								<div class="portf-filter text-center appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
 									<ul class="list-unstyled ul-filter">
 										<li data-filter="*" class="active_filter">all</li>
+										<li data-filter=".rolls">gimbap</li>
 										<li data-filter=".bingsu">bingsu</li>
 										<li data-filter=".tea">tea</li>
 										<li data-filter=".meals">meals</li>
@@ -736,59 +737,59 @@
 								</div>
 							</div>
 							
-							<!-- ROLLS MENU ITEMS --
+							<!-- ROLLS MENU ITEMS -->
 							<div class="col-md-6 rolls">
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">BLT Roll</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Original Gimbap</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 8</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5.49</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Bulgogi, lettuce, tomato with mayo. </p>
+										<p>Rice, carrot, egg, pickled radish, braised burdock roots, crab meat, cucumber, fish cake.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Philadelphia Roll</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Cheese Gimbap</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 9</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 6.49</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Smoked salmon, crab meat, cucumber, avocado, cream cheese.</p>
+										<p>Rice, cheddar cheese, carrot, egg, pickled radish, crab meat, cucumber, fish cake.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Mountain Roll</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tuna Gimbap</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span>9</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span>6.99</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Spicy salmon, avocado, cucumber, topped with salmon. </p>
+										<p>Rice, tuna, egg, pickled radish, crab meat, cucumber.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Caterpillar Roll</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bulgogi Gimbap</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 9</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 7.49</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Unagi, cucumber, avocado, topped with salmon.</p>
+										<p>Rice, bulgogi (beef), egg, pickled radish, crab meat, cucumber.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
-										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bayview Roll</h3></div>
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Tempura Shrimp Gimbap</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 9</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 7.49</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Dynamite Roll topped with torched white tuna.</p>
+										<p>Rice, tempura shrimp, egg, pickled radish, crab meat, cucumber, fish cake.</p>
 									</div>
 								</div>
-								<div class="custom-menu-item">
+								<!--div class="custom-menu-item">
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Snow Valley Roll</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
@@ -797,8 +798,8 @@
 									<div class="custom-menu-item-desc">
 										<p>Unagi, avocado, tempura bits, torched white tuna, garlic mayo.</p>
 									</div>
-								</div>
-							</div>-->
+								</!--div-->
+							</div>
 							
 							<!-- MEALS MENU ITEMS -->
 							<div class="col-md-6 meals">
@@ -806,10 +807,10 @@
 									<div class="custom-menu-item-details">
 										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bulgogi Bento</h3></div>
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
-										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 9.99</strong></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 10.49</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Bulgogi, rice, side-dishes.</p>
+										<p>Served with bulgogi beef, rice, corn salad, lettuce salad, and dumplings.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
@@ -819,7 +820,7 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 10.99</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Sushi rice, lettuce, tomato, avodaco, edamame, corn, salmon.</p>
+										<p>Sushi rice, lettuce, tomato, avodaco, edamame, corn, salmon. Comes with spicy mayo.</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
@@ -829,7 +830,10 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 6.99</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Noodles, seafood broth, green onions, seaweed, tempura bits.</p>
+										<p>Noodles, seafood broth, green onions, seaweed, tempura bits.
+											<br>
+											Toppings: Boiled egg, tempura shrimp, bulgogi beef ($1 ea.)
+										</p>
 									</div>
 								</div>
 								<div class="custom-menu-item">
@@ -839,7 +843,21 @@
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 6.99</strong></div>
 									</div>
 									<div class="custom-menu-item-desc">
-										<p>Stir-fried Korean rice cake with hot pepper paste, egg, fish cake.</p>
+										<p>Stir-fried Korean rice cake with hot pepper paste, fish cake.
+											<br>
+											Toppings: Boiled egg, cheese, tempura shrimp ($1 ea.)
+										</p>
+									</div>
+								</div>
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bulgogi Dog</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 5.99</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p>Bulgogi beef, lettuce, cheese, served on a bun.
+										</p>
 									</div>
 								</div>
 							</div>
