--- a/index.html
+++ b/index.html
@@ -617,9 +617,9 @@
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9 | <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
 									</div>
-									<!--div class="custom-menu-item-desc">
-										<p>Bowl $11.</p>
-									</!--div-->
+									<div class="custom-menu-item-desc">
+										<p>Korean shaved ice dessert with injeolmi (Korean sweet rice cake) topping.</p>
+									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
@@ -627,9 +627,9 @@
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
-									<!--div class="custom-menu-item-desc">
-										<p>Bowl $12.</p>
-									</!--div-->
+									<div class="custom-menu-item-desc">
+										<p>Korean shaved ice dessert with strawberry topping.</p>
+									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
@@ -637,9 +637,9 @@
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9 | <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
 									</div>
-									<!--div class="custom-menu-item-desc">
-										<p>Bowl $11.</p>
-									</!--div-->
+									<div class="custom-menu-item-desc">
+										<p>Korean shaved ice dessert with mango topping.</p>
+									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
@@ -647,9 +647,9 @@
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
-									<!--div class="custom-menu-item-desc">
-										<p>Bowl $12.</p>
-									</!--div-->
+									<div class="custom-menu-item-desc">
+										<p>Korean shaved ice dessert with green tea topping.</p>
+									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
@@ -657,9 +657,9 @@
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
-									<!--div class="custom-menu-item-desc">
-										<p>Bowl $12.</p>
-									</!--div-->
+									<div class="custom-menu-item-desc">
+										<p>Korean shaved ice dessert with red bean topping.</p>
+									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
@@ -667,9 +667,9 @@
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 9 | <span class="custom-tertiary-font">bowl $</span> 12</strong></div>
 									</div>
-									<!--div class="custom-menu-item-desc">
-										<p>Bowl $11.</p>
-									</!--div-->
+									<div class="custom-menu-item-desc">
+										<p>Korean shaved ice dessert with Oreo topping.</p>
+									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
@@ -677,9 +677,9 @@
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
-									<!--div class="custom-menu-item-desc">
-										<p>Bowl $12.</p>
-									</!--div-->
+									<div class="custom-menu-item-desc">
+										<p>Korean shaved ice dessert with taro topping.</p>
+									</div>
 								</div>
 								<div class="custom-menu-item">
 									<div class="custom-menu-item-details">
@@ -687,9 +687,9 @@
 										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
 										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">cup $</span> 10 | <span class="custom-tertiary-font">bowl $</span> 13</strong></div>
 									</div>
-									<!--div class="custom-menu-item-desc">
-										<p>Bowl $12.</p>
-									</!--div-->
+									<div class="custom-menu-item-desc">
+										<p>Korean shaved ice dessert with cheesecake topping.</p>
+									</div>
 								</div>
 							</div>
 
