--- a/index.html
+++ b/index.html
@@ -525,7 +525,9 @@
 									<h2 class="text-color-light font-weight-semibold text-9 negative-ls-1 mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="400">Store Hours</h2>
 								</div>
 								<div class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
-									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">10066 Bayview Ave #8,<br>Richmond Hill, ON L4C 0W5</p>
+									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">10066 Bayview Ave #8,<br>Richmond Hill, ON L4C 0W5
+									<br>Holiday hours may vary.
+									</p>
 									<!--
 									<p class="font-weight-light text-color-light text-3 opacity-7 px-4">Don't want to wait in line? Order through our online menu to save time. Pickup and pay <b>at the counter.</b></p>
 									-->
@@ -539,11 +541,11 @@
 								<div class="row justify-content-center">
 									<div class="col-md-6 col-lg-4 mb-4 mb-md-0 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="500">
 										<h2 class="text-color-light font-weight-semibold text-8 negative-ls-1 mb-3">MON - FRI</h2>
-										<p class="font-weight-light text-color-light opacity-7 mb-0"><span class="d-block">10:00 AM</span> TO <span class="d-block">7:00 PM</span></p>
+										<p class="font-weight-light text-color-light opacity-7 mb-0"><span class="d-block">10:00 AM</span> TO <span class="d-block">8:00 PM</span></p>
 									</div>
 									<div class="col-md-6 col-lg-4 appear-animation" data-appear-animation="fadeInLeftShorter" data-appear-animation-delay="700">
 										<h2 class="text-color-light font-weight-semibold text-8 negative-ls-1 mb-3">SAT ONLY</h2>
-										<p class="font-weight-light text-color-light opacity-7 mb-0"><span class="d-block">12:00 PM</span> TO <span class="d-block">6:00 PM</span></p>
+										<p class="font-weight-light text-color-light opacity-7 mb-0"><span class="d-block">12:00 PM</span> TO <span class="d-block">8:00 PM</span></p>
 									</div>
 								</div>
 							</div>
@@ -569,6 +571,7 @@
 										<li data-filter=".bingsu">bingsu</li>
 										<li data-filter=".tea">tea</li>
 										<li data-filter=".meals">meals</li>
+										<li data-filter=".combos">combos</li>
 									</ul>
 								</div>
 							</div>
@@ -857,6 +860,41 @@
 									</div>
 									<div class="custom-menu-item-desc">
 										<p>Bulgogi beef, lettuce, cheese, served on a bun.
+										</p>
+									</div>
+								</div>
+							</div>
+
+							<!-- COMBOS MENU ITEMS -->
+							<div class="col-md-6 combos">
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Original Gimbap + Udon</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 11.50</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p>Save $1 when bought together.</p>
+									</div>
+								</div>
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Original Gimbap + Topokki</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 11.50</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p>Save $1 when bought together.</p>
+									</div>
+								</div>
+								<div class="custom-menu-item">
+									<div class="custom-menu-item-details">
+										<div class="custom-menu-item-title"><h3 class="text-transform-none text-5 mb-0">Bulgogi Bento + Original Milk Tea</h3></div>
+										<div class="custom-menu-item-line mx-3 mb-2 opacity-4"></div>
+										<div class="custom-menu-item-price"><strong class="custom-tertiary-font text-color-dark"><span class="custom-tertiary-font">$</span> 12.99</strong></div>
+									</div>
+									<div class="custom-menu-item-desc">
+										<p>Add small original milk tea to bulgogi bento for just $2.50 extra.
 										</p>
 									</div>
 								</div>
